fix bug on homepage not showing logged in user correctly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1112,6 +1112,7 @@ header {
 
 nav {
     display: flex;
+    align-items: center;
 }
 
 nav .btnPrimary {
